# chatbox

./: .gitignore  chatbox.db  main.py  pyproject.toml
api/: lifespan.py
api/routes/: __init__.py  auth.py  chat.py  core.py  files.py  users.py
api/security/: hash.py  jwt_token.py
api/services/: auth.py  file.py  user.py
db/: database.py  models.py
models/: file.py  llm.py  token.py  user.py
utils/: embeddings.py  file_system.py  llm.py  ranking.py  text.py  tools.py
utils/config/: config.py
utils/security/: jwt_token.py
